// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders mid-word correctly 1`] = `
<DocumentFragment>
  .emotion-33 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-32 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.emotion-3 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-28 {
  margin-right: 0.25rem;
}

.emotion-26 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-24 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

<div
    class="emotion-33"
    data-testid="text"
  >
    <div
      class="emotion-32"
    >
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          t
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          h
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          e
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          q
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          i
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          c
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          k
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          b
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          r
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          w
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          n
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          f
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          x
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          e
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          j
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          m
        </span>
        <span
          class="pending emotion-24"
          data-testid="pending"
        >
          p
        </span>
        <span
          class="pending emotion-24"
          data-testid="pending"
        >
          s
        </span>
        <span
          class="emotion-26"
          data-testid="caret"
        />
      </span>
      <span
        class="emotion-28"
        data-testid="remainingWord"
      >
        over
      </span>
      <span
        class="emotion-28"
        data-testid="remainingWord"
      >
        the
      </span>
      <span
        class="emotion-28"
        data-testid="remainingWord"
      >
        lazy
      </span>
      <span
        class="emotion-28"
        data-testid="remainingWord"
      >
        dog
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders typing area 1`] = `
<DocumentFragment>
  .emotion-27 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-26 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.emotion-3 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-21 {
  margin-right: 0.25rem;
}

.emotion-19 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

<div
    class="emotion-27"
    data-testid="text"
  >
    <div
      class="emotion-26"
    >
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          t
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          h
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          e
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          q
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          u
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          i
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          c
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          k
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          b
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          r
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          w
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          n
        </span>
      </span>
      <span
        class="emotion-3"
        data-testid="word"
      >
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          f
        </span>
        <span
          class="correct emotion-0"
          data-testid="correct"
        >
          o
        </span>
        <span
          class="wrong emotion-16"
          data-testid="wrong"
        >
          x
        </span>
        <span
          class="emotion-19"
          data-testid="caret"
        />
      </span>
      <span
        class="emotion-21"
        data-testid="remainingWord"
      >
        jumps
      </span>
      <span
        class="emotion-21"
        data-testid="remainingWord"
      >
        over
      </span>
      <span
        class="emotion-21"
        data-testid="remainingWord"
      >
        the
      </span>
      <span
        class="emotion-21"
        data-testid="remainingWord"
      >
        lazy
      </span>
      <span
        class="emotion-21"
        data-testid="remainingWord"
      >
        dog
      </span>
    </div>
  </div>
</DocumentFragment>
`;
